

#set(CPACK_PROJECT_NAME ${PROJECT_NAME})
#
#add_subdirectory(parser)


# target_link_libraries(${PROJECT_NAME} PUBLIC parser)

# link_directories(${MyProject_SOURCE_DIR}/src)

# target_include_directories(${PROJECT_NAME} PUBLIC
#                           ${PROJECT_SOURCE_DIR}/src/parser
#                           )


#include(CPack)
